--- a/helloworld.html
+++ b/helloworld.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <script src="build/react.js"></script>
   <script src="build/JSXTransformer.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
   <script type="text/jsx" src="src/helloworld.js"></script>
   <title>Started React</title>
 </head>
 <body>
-  <div id="example"></div>
+  <div id="content"></div>
 </body>
 </html>
